# paperspace-custom

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  main.yml
config/: custom_node_heavy_dirs.conf.example  supervisord.conf
scripts/: entrypoint.sh  install_custom_node_deps.sh
src/paperspace_stable_diffusion_suite/: __init__.py
